<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Survey4">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/survey_2title"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:text="@string/travel_mode"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/travel_s"
        android:layout_width="279dp"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="112dp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"

        android:layout_marginLeft="40dp"
        android:layout_marginTop="158dp"
        android:text="@string/Lights"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/lights_spinner"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textView26"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
android:layout_marginLeft="40dp"
        android:layout_marginTop="235dp"
        android:text="@string/Fans"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/fans_spinner"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView28"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fans_spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/ApplianceRatings"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/ratings_spinner"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView29"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/skip"
        android:layout_centerHorizontal="true"
        android:text="CONTINUE" />

    <Button
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="SKIP" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/finish"
        android:layout_centerHorizontal="true"
        android:text="STEP 4/5"
        android:textSize="15dp" />

</RelativeLayout>