<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Survey2">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/survey_2title"
        android:textSize="20dp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        android:text="@string/qn1"
        android:textSize="18dp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/timespinner"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="135dp"
        android:layout_marginTop="120dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="221dp"
        android:layout_height="29dp"
        android:layout_above="@+id/time_spent_at_home"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/typical_time"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="61dp"
        android:layout_height="31dp"
        android:layout_alignBaseline="@+id/time_spent_at_home"
        android:layout_alignStart="@+id/textView3"
        android:text="Home"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/time_spent_at_home"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/time_spent_in_travel"
        android:layout_alignEnd="@+id/textView"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="61dp"
        android:layout_height="34dp"
        android:layout_alignBottom="@+id/time_spent_at_office"
        android:layout_alignStart="@+id/textView3"
        android:text="Office"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/time_spent_at_office"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="172dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="61dp"
        android:layout_height="31dp"
        android:layout_alignBottom="@+id/time_spent_in_travel"
        android:layout_alignStart="@+id/textView3"
        android:text="Travel"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/time_spent_in_travel"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="227dp"
        android:ems="10"
        android:inputType="textPersonName" />


    <Button
        android:id="@+id/continue_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="71dp"
        android:text="Continue" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/continue_2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-38dp"
        android:text="STEP 2/5"
        android:textSize="15dp" />

    <Button
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="Skip" />

    </RelativeLayout>